<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roi_depth_query</name>
  <version>0.1.0</version>
  <description>
    Efficient ROI depth lookup using a colour→depth pixel LUT.
    Computes the non-zero mean depth (metres) inside a bounding box expressed
    in colour-image coordinates without running full-frame rs2::align.
  </description>
  <maintainer email="jenninbl@RHIT.edu">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>realsense2_camera_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>rclcpp_components</depend>

  <!-- librealsense2 is a system dependency installed by the realsense2_camera package -->
  <exec_depend>realsense2_camera</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
